<resources>
    <string name="app_name">Tip Time</string>
    <string name="app_title">Tip Time</string>
    <string name="cost_input_hint">Cost of Service</string>
    <string name="cost_input_helper_text">How was the service?</string>
    <string name="text_amazing_rate_service">Amazing (20%)</string>
    <string name="text_good_rate_service">Good (18%)</string>
    <string name="text_ok_rate_service">OK (15%)</string>
    <string name="text_title_switch_round_tip">Round up tip?</string>
    <string name="btn_calculate_tip_text">Calculate the tip!</string>
    <string name="empty_input_cost_toast">Please insert the cost of service first!</string>
    <string name="result_cost_of_service_title">Cost of Service:</string>
    <string name="result_tip_title">Tip :</string>
    <string name="tip_calculated_success_toast_text">Tip Calculated!</string>
    <string name="tip_percentage_empty_text">Please choose the tip percentage first!</string>
</resources>