<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_material"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_title"
            android:background="@color/primary_green_material"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_marginTop="?attr/actionBarSize">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_input_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cost_input_hint"
            app:helperTextEnabled="true"
            app:helperText="@string/cost_input_helper_text"
            app:helperTextTextAppearance="?attr/textAppearanceBodyMedium"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fillable_input_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_input_cost">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_amazing_rate_service"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_good_rate_service"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_ok_rate_service"/>

        </RadioGroup>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_round_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title_switch_round_tip"
            android:checked="false"
            android:minHeight="?attr/minTouchTargetSize"
            style="@style/Widget.App.Switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup_service"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_calculate_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/switch_pressed_material"
            app:cornerRadius="24dp"
            android:text="@string/btn_calculate_tip_text"
            app:layout_constraintTop_toBottomOf="@id/switch_round_tip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>